feat: many refactoring and make handler for dirty address
