# internal/delivery/http/request/wallet_request/dirty.go
@@ -1,0 +1,5 @@
+package wallet_request
+
+type MarkIsDirtyRequest struct {
+	Address string `json:"address" validate:"required"`
+} //	@name	MarkIsDirtyRequest
